syntax = "proto3";

package nyo.lu.appdeployer.grpcservices;
option java_multiple_files = true;

// The greeting service definition.
service TestService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (stream HelloReply);

}

service X{
  rpc SayBonjour(HelloRequest) returns (HelloReply);
}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}